added sass to home page and edited home page html

--- a/css/page/_home.scss
+++ b/css/page/_home.scss
@@ -13,6 +13,10 @@ html {
     scroll-behavior: smooth;
 }
 
+.logo {
+    width: 5%;
+}
+
 nav {
     display: flex;
     justify-content: space-around;
