--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,59 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,700;1,800&display=swap");
+* {
+  text-align: center;
+  font-family: 'Quicksand', sans-serif;
+}
+
+.msg-form {
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+}
+
+.msg-form input, .msg-form textarea {
+  margin: 10px;
+  width: 200px;
+  height: 30px;
+  text-align: left;
+  padding-left: 10px;
+  border-radius: 10px;
+}
+
+.msg-form #email {
+  width: 425px;
+}
+
+.msg-form label {
+  padding-left: 10px;
+  font-weight: 500;
+  color: white;
+  margin-top: 40px;
+}
+
+.msg-form #msg {
+  width: 425px;
+  margin-left: 10px;
+  height: 200px;
+  text-align: left;
+  padding-top: 10px;
+}
+
+.msg-form #send-btn {
+  width: 120px;
+  height: 30px;
+  display: block;
+  margin: 0 auto;
+  border-radius: 20px;
+}
+
+body h2 {
+  color: white;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  font-size: 30px;
+}
+
 * {
   margin: 0px;
   padding: 0px;
@@ -120,14 +176,5 @@ h2 {
 .btn1:hover::before,
 .btn2:hover::before {
   height: 180%;
-}
-
-input.submit {
-  margin-top: 40px;
-  width: 75px;
-  height: 30px;
-  border-radius: 18px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 20px;
 }
 /*# sourceMappingURL=styles.css.map */
