--- a/css/page/_contact.scss
+++ b/css/page/_contact.scss
@@ -1,6 +1,6 @@
-* {
+.contact-html {
     text-align: center;
-    font-family: 'Quicksand', sans-serif;
+    font-family: $quicksand-font;
 }
 
 .msg-form {
@@ -8,7 +8,7 @@
     margin-left: auto;
     margin-right: auto;
     text-align: left;
-
+    
     input, textarea {
         margin: 10px;
         width: 200px;
@@ -16,6 +16,8 @@
         text-align: left;
         padding-left: 10px;
         border-radius: 10px;
+        margin-bottom: 20px;
+        border: none;
     }
 
     #email{
@@ -26,7 +28,6 @@
         padding-left: 10px;
         font-weight: 500;
         color: white;
-        margin-top: 20px;
     }
 
     #msg {
@@ -35,6 +36,7 @@
         height: 200px;
         text-align: left;
         padding-top: 10px;
+        resize: none;
     }
 
     #send-btn {
@@ -43,11 +45,12 @@
         display: block;
         margin: 0 auto;
         border-radius: 20px;
-        // background-color: #70A288;
+        border: none;
+
     }
 }
 
-body {
+.contact-body {
     h2 {
         color: white;
         margin-top: 100px;
