Added scss to about page (80% complete)

--- a/css/other/_variables.scss
+++ b/css/other/_variables.scss
@@ -1,11 +1,14 @@
 $raleway-font:'Raleway', sans-serif;
 $quicksand-font: 'Quicksand', sans-serif;
 $darkCornflowerBlue-color: #274690;
+$blueJean-color: #55ACEE;
 $magnoliaWhite-color:#FFFAFF;
 $maximumBluePurple-color:#B4A0E5;
 $polishedPine-color:#70a288;
 $fieryRose-color:#FC6471;
 $magicMint-color:#8AE9C1;
 $jet-color:#302B27;
-$orangeYellowCrayola-color:#F2CD5D
+$platinum-color:#EAEAEA;
+$orangeYellowCrayola-color:#F2CD5D;
+$navBartext-fontsize:20px;
 
