--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 .title {
   text-align: center;
   padding: 0;
-  font-size: 3.5em;
+  font-size: 3em;
   margin: 0;
   padding: 60px 20px;
 }
@@ -47,20 +47,45 @@
   font-size: 1.1em;
 }
 
+.bubblesContainer .p1 {
+  padding: 50px 45px;
+}
+
+.bubblesContainer .p2 {
+  padding: 50px 35px;
+}
+
+.bubblesContainer .p3 {
+  padding: 50px 35px;
+}
+
+.bubblesContainer .p4 {
+  padding: 50px 40px;
+}
+
+.bubblesContainer .p5 {
+  padding: 50px 45px;
+}
+
+.bubblesContainer .p6 {
+  padding: 50px 45px;
+}
+
+.bubblesContainer .p7 {
+  padding: 50px 30px;
+}
+
 .bubble {
   text-align: center;
   display: inline-block;
   font-size: 0.9em;
-  padding: 40px;
   border-radius: 50%;
   font-weight: bolder;
   color: #FFFAFF;
-  margin: 10px;
+  margin: 5px;
   border: solid 3px #FFFAFF;
   -webkit-transition: border 2s;
   transition: border 2s;
-  -webkit-box-shadow: -1px 2px 2px #000000;
-          box-shadow: -1px 2px 2px #000000;
 }
 
 @-webkit-keyframes bounce-1 {
@@ -133,13 +158,25 @@
   background-color: #55ACEE;
 }
 
-.infoContainer {
+.infoContents {
   background-color: #EAEAEA;
   border-radius: 20px;
   width: 70%;
   margin-top: 30px;
-  margin: 50px auto 0 auto;
+  margin: 50px auto 50px auto;
   padding: 30px;
+}
+
+.infoContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .infoTitle {
@@ -154,6 +191,46 @@
   border-radius: 20px;
   text-align: left;
   font-weight: bold;
+}
+
+.item {
+  padding: 10px;
+  margin: 5px;
+}
+
+.infoText {
+  width: 50%;
+}
+
+.infoImage {
+  width: 50%;
+}
+
+.aboutImages {
+  width: 100%;
+  background-color: red;
+}
+
+.buttonAbout {
+  background-color: #EAEAEA;
+  border-radius: 50%;
+  border: none;
+  -webkit-transition: background-color 1s;
+  transition: background-color 1s;
+  -webkit-box-shadow: 0 2px 2px;
+          box-shadow: 0 2px 2px;
+}
+
+.buttonImage {
+  -webkit-transform: scale(0.8, 0.8);
+          transform: scale(0.8, 0.8);
+}
+
+.buttonAbout:hover {
+  background-color: #FFFAFF;
+  border-radius: 50%;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 .contact-html {
