Fixed padding in nav bar

--- a/css/page/_about.scss
+++ b/css/page/_about.scss
@@ -13,17 +13,19 @@
 }
 
 .navBar {
-    background-color: $orangeYellowCrayola-color;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+    background-color: $orangeYellowCrayola-color;  
     margin: 0;
     padding: 0;
     width: 100%;
     right: 0;
 }
+.navLinks{
+    list-style: none;
+    margin: auto;
 
+}
 .link {
+    display: inline;
     font-family: $quicksand-font;
     text-align: center;
     text-decoration: none;
@@ -31,6 +33,7 @@
     font-weight: bold;
     padding: 10px;
     margin: 0;
+    text-align: left;
 }
 
 .bubblesContainer {
