Last changes to scss for profile for the day.

--- a/css/page/_profile.scss
+++ b/css/page/_profile.scss
@@ -1,106 +1,106 @@
-// .sideNavBar {
-//     width: 60px;
-//     background-color: $orangeYellowCrayola-color;
-//     position: fixed;
-//     left: 0;
-//     top: 0;
-//     height: 100%;
-//     margin: 0;
-//     padding: 0;
-// }
+.sideNavBar {
+    width: 60px;
+    background-color: $orangeYellowCrayola-color;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 
-// .profileContent {
-//     // background-color:red;
-//     margin-left: 60px;
-//     padding: 0px 10px;
-//     text-align: center;
-//     height: 270px;
+.profileContent {
+    // background-color:red;
+    margin-left: 60px;
+    padding: 0px 10px;
+    text-align: center;
+    height: 270px;
 
-// }
+}
 
-// .profileInfo {
-//     display: flex;
-//     flex-direction: row;
-// }
+.profileInfo {
+    display: flex;
+    flex-direction: row;
+}
 
-// .profileImage {
-//     width: 20%;
-// }
+.profileImage {
+    width: 20%;
+}
 
-// .pfp {
-//     border-radius: 20%;
-//     width: 200px;
-//     border: solid $platinum-color;
-// }
+.pfp {
+    border-radius: 20%;
+    width: 200px;
+    border: solid $platinum-color;
+}
 
-// .aboutMe {
-//     h1 {
-//         padding: 0;
-//         margin: 5px;
-//         font-size: 2.0em;
-//     }
+.aboutMe {
+    h1 {
+        padding: 0;
+        margin: 5px;
+        font-size: 2.0em;
+    }
 
-//     h3 {
-//         padding: 0;
-//         margin: 5px;
-//     }
+    h3 {
+        padding: 0;
+        margin: 5px;
+    }
 
-//     span {
-//         font-weight: lighter;
-//     }
+    span {
+        font-weight: lighter;
+    }
 
-//     padding: 0 0 0 60px;
-//     margin:20px;
-//     word-wrap:break;
-//     width:60%;
-//     background-color: red;
-//     word-wrap: break-word;
-//     text-align: left;
-//     box-shadow: 0 2px 8px $jet-color;
-// }
+    padding: 0 0 0 60px;
+    margin:20px;
+    word-wrap:break;
+    width:60%;
+    background-color:$magnoliaWhite-color;
+    word-wrap: break-word;
+    text-align: left;
+    box-shadow: 0 2px 8px $jet-color;
+}
 
-// .profileButtons {
-//     background-color: $orangeYellowCrayola-color;
-//     border: none;
-//     // width:50%;
-//     margin: auto;
-// }
+.profileButtons {
+    background-color: $orangeYellowCrayola-color;
+    border: none;
+    // width:50%;
+    margin: auto;
+}
 
-// .pbBottom {
-//     position: fixed;
-//     bottom: 0;
-//     padding: 13px;
-//     left: 0px;
-//     border-radius: 5px 50px 0 5px
-// }
+.pbBottom {
+    position: fixed;
+    bottom: 0;
+    padding: 13px;
+    left: 0px;
+    border-radius: 5px 50px 0 5px
+}
 
-// .navLinksProfile {
-//     margin: 0;
-//     padding: 0;
-// }
+.navLinksProfile {
+    margin: 0;
+    padding: 0;
+}
 
-// .profile-but,
-// .home-but,
-// .settings-but,
-// .matches-but,
-// .instruction-but {
-//     // color:white;
-//     background-color: $orangeYellowCrayola-color;
-//     padding: 20px 0;
-// }
+.profile-but,
+.home-but,
+.settings-but,
+.matches-but,
+.instruction-but {
+    // color:white;
+    background-color: $orangeYellowCrayola-color;
+    padding: 20px 0;
+}
 
-// .settings-but {
-//     display: block;
-//     background-color: $orangeYellowCrayola-color;
-//     bottom: 0;
-//     top: 0;
-// }
+.settings-but {
+    display: block;
+    background-color: $orangeYellowCrayola-color;
+    bottom: 0;
+    top: 0;
+}
 
-// svg {
-//     width: 2.5em;
-//     height: 2.5em;
-// }
+svg {
+    width: 2.5em;
+    height: 2.5em;
+}
 
-// .linkContent {
-//     background-color: green;
-// }
+.linkContent {
+    background-color: green;
+}
