--- a/css/styles.css
+++ b/css/styles.css
@@ -660,13 +660,14 @@ h2 {
 
 .aboutMe {
   padding: 0 0 0 60px;
+  margin: 20px;
   word-wrap: break;
   width: 60%;
-  background-color: white;
+  background-color: #FFFAFF;
   word-wrap: break-word;
   text-align: left;
-  -webkit-box-shadow: 0 2px 8px;
-          box-shadow: 0 2px 8px;
+  -webkit-box-shadow: 0 2px 8px #302B27;
+          box-shadow: 0 2px 8px #302B27;
 }
 
 .aboutMe h1 {
@@ -703,7 +704,11 @@ h2 {
   padding: 0;
 }
 
-.profile-but, .home-but, .settings-but, .matches-but, .instruction-but {
+.profile-but,
+.home-but,
+.settings-but,
+.matches-but,
+.instruction-but {
   background-color: #F2CD5D;
   padding: 20px 0;
 }
@@ -718,6 +723,10 @@ h2 {
 svg {
   width: 2.5em;
   height: 2.5em;
+}
+
+.linkContent {
+  background-color: green;
 }
 
 .question-html {
