fixed font size bug on page, should work with nav bars

--- a/css/page/_about.scss
+++ b/css/page/_about.scss
@@ -13,6 +13,7 @@
 }
 
 .navBar {
+    font-size: $navBartext-fontsize;
     background-color: $orangeYellowCrayola-color;
     margin: 0;
     padding: 0;
