added login page

--- a/css/styles.css
+++ b/css/styles.css
@@ -510,6 +510,51 @@ h2 {
   height: 180%;
 }
 
+.login-body {
+  font-size: 3em;
+  text-align: center;
+  font-family: "Quicksand", sans-serif;
+  color: white;
+}
+
+.login-body__button {
+  font-family: "Quicksand", sans-serif;
+  background-color: white;
+  height: 40px;
+  font-size: 20px;
+  border-radius: 30px;
+  border: none;
+  margin: 20px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.login-body__image {
+  margin: 1em;
+  width: 10%;
+}
+
+.login-body h1 {
+  padding-bottom: 30px;
+}
+
+.login-body__prompt, .login-body__text {
+  font-size: 20px;
+}
+
+.login-body__info {
+  font-family: "Quicksand", sans-serif;
+  background-color: white;
+  height: 40px;
+  font-size: 20px;
+  border-radius: 10px;
+  border: none;
+  margin: 10px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
 .matcher-html {
   text-align: center;
   font-family: "Quicksand", sans-serif;
