added sass to regiser page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1125,4 +1125,41 @@ svg {
   border-radius: 30px;
   border: none;
 }
+
+.register-body {
+  text-align: center;
+  color: white;
+  font-family: "Quicksand", sans-serif;
+}
+
+input {
+  margin: 10px;
+  width: 200px;
+  height: 30px;
+  text-align: left;
+  padding-left: 10px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  border: none;
+}
+
+label.headings {
+  font-weight: bold;
+}
+
+label.desc {
+  font-size: 15px;
+}
+
+input.submit {
+  text-align: center;
+}
+
+#email {
+  width: 435px;
+}
+
+#username {
+  width: 435px;
+}
 /*# sourceMappingURL=styles.css.map */
