--- a/css/page/_profile.scss
+++ b/css/page/_profile.scss
@@ -1,4 +1,3 @@
-
 .sideNavBar {
     width: 60px;
     background-color: $orangeYellowCrayola-color;
@@ -11,12 +10,10 @@
 }
 
 .profileContent {
-    // background-color:red;
-    margin-left: 60px;
+    margin: 60px;
     padding: 0px 10px;
     text-align: center;
     height: 270px;
-
 }
 
 .profileInfo {
@@ -29,8 +26,8 @@
 }
 
 .pfp {
-    border-radius: 20%;
-    width: 200px;
+    border-radius: 20px;
+    width: 225px;
     border: solid $platinum-color;
 }
 
@@ -57,7 +54,7 @@
     background-color:$magnoliaWhite-color;
     word-wrap: break-word;
     text-align: left;
-    box-shadow: 0 2px 8px $jet-color;
+    // box-shadow: 0 2px 8px $jet-color;
 }
 
 .profileButtons {
@@ -102,8 +99,80 @@ svg {
     height: 2.5em;
 }
 
-.contentContainer {
+@media screen and (max-width: 800px) {
+    .profileContent {
+        width:90%;
+        .profileImage{
+            margin:0;
+            padding:18px;
+            img{
+                border-radius:20px;     
+                         
+            }
+        }
+        .aboutMe {
+            padding: 0;
+            flex-direction: row;
+            margin-left:90px;
 
+            h1 {
+                text-align: left;
+                font-size: 30px;
+                margin:5px;
+            }
+
+            h3 {
+                text-align: left;
+                font-size: 20px;
+            }
+        }
+    }
+
+}
+
+@media screen and (max-width: 600px) {
+
+    .profileContent{
+        .profileInfo {
+            flex-direction: column;
+            // margin:10px;
+            width:100%;
+            .item {
+                width: 100%;
+            }
+            img{
+                display:block;
+                margin:10px auto;
+                width: 200px;
+
+    
+            }
+        }
+    .aboutMe {
+        width: 100%;
+        flex-direction: column;
+        text-align: center;
+        margin:15px;
+
+        .item {
+            width: 100%;
+        }
+        
+        h1 {
+            text-align: center;
+            font-size: 30px;
+            margin:5px;
+        }
+
+        h3 {
+            text-align: center;
+            font-size: 20px;
+        }
+
+    }}
+}
+
+.contentContainer {
     .Title {
         display: flex;
 
@@ -122,7 +191,6 @@ svg {
         .item {
             background-color: $platinum-color;
             border-radius: 50%;
-
         }
 
         .titleIcon {
@@ -142,105 +210,138 @@ svg {
         padding: 10px;
         justify-content: space-around;
         // background-color: aqua;
-       
+
         .item {
-            padding:0;
-            border:solid 10px $magicMint-color;
+            padding: 0;
+            border: solid 10px $magicMint-color;
             border-radius: 20px;
-            background-color:$magnoliaWhite-color
+            background-color: $magnoliaWhite-color;
+            box-shadow: 0 2px 4px $platinum-color;
+
+            p{
+                padding:5px 5px;
+            }
+
         }
-    
+
     }
-     .item {
+
+    .item {
         width: 40%;
         padding: 20px;
     }
-    @media screen and (max-width: 800px){
+
+    @media screen and (max-width: 800px) {
+        .contentContainer{
         .mostRecentThree {
-           flex-direction: row;
+            flex-direction: row;
+
         }
-    
     }
-    @media screen and (max-width: 600px){
+
+    }
+
+    @media screen and (max-width: 600px) {
         .mostRecentThree {
+            width: 100%;
             flex-direction: column;
             text-align: center;
-            .item{
-                width:100%;
+            margin:0;
+
+            .item {
+                width: 95%;
             }
-    
+
         }
     }
 }
-  
+
 
 .BottomContainer {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    img,p{
-        display:inline-block;
+
+    img,
+    p {
+        display: inline-block;
     }
-   
-    img{
-        width:60px;
-        height:60px;
+
+    img {
+        width: 50px;
+        height: 50px;
         float: left;
     }
-    p{
+
+    p {
         background-color: $platinum-color;
         border-radius: 20px;
-        padding:10px 15px;
+        padding: 10px 15px;
         width: 100%;
         text-align: center;
-        
+
     }
+
     .itemB {
         width: 50%;
-        margin: 10px;
-        padding: 20px;
+        // margin: 10px;
+        padding: 10px;
+
         // background-color: pink;
-        .placement{display: flex;}
+        .placement {
+            display: flex;
+        }
     }
-    .questionaireContainer,.socialMediaContainer{
+
+    .questionaireContainer,
+    .socialMediaContainer {
         box-shadow: 0 2px 2px $platinum-color;
         width: 80%;
-        // background-color: rgb(138, 158, 138);
-        display:inline-block;
-        margin:20px;
-        padding:20px;
+        display: inline-block;
+        margin: 10px;
+        padding: 5px;
     }
-    .media{
-        border-radius:20px;
-        background-color:$maximumBluePurple-color;
-        width:fit-content;
-        padding:5px 20px;
-        margin:10px auto;
+
+    .media {
+        border-radius: 20px;
+        background-color: $maximumBluePurple-color;
+        width: fit-content;
+        padding: 5px 20px;
+        margin: 10px auto;
     }
 
 }
 
-@media screen and (max-width: 800px){
+@media screen and (max-width: 800px) {
     .BottomContainer {
-       flex-direction: row;
+        flex-direction: row;
     }
 
 }
-@media screen and (max-width: 600px){
+
+@media screen and (max-width: 600px) {
     .BottomContainer {
 
         flex-direction: column;
-        margin-left:30px;
-        margin-right:auto;
-        .questionaireContainer,.socialMediaContainer{
-        width:100%;
-        padding:40px;
+        // margin-left: 30px;
+        margin-right: auto;
+
+        .socialMediaContainer {
+            width: 80%;
+            // padding:40px;
         }
-        p{
+
+        .hideQuestionaire {
+            display: none;
+        }
+
+        p {
             width: 100%;
         }
 
-
+        .itemB {
+            width: 100%;
+        }
     }
 
 }
