--- a/css/styles.css
+++ b/css/styles.css
@@ -678,7 +678,7 @@ h2 {
 }
 
 .profileContent {
-  margin-left: 60px;
+  margin: 60px;
   padding: 0px 10px;
   text-align: center;
   height: 270px;
@@ -699,8 +699,8 @@ h2 {
 }
 
 .pfp {
-  border-radius: 20%;
-  width: 200px;
+  border-radius: 20px;
+  width: 225px;
   border: solid #EAEAEA;
 }
 
@@ -712,8 +712,6 @@ h2 {
   background-color: #FFFAFF;
   word-wrap: break-word;
   text-align: left;
-  -webkit-box-shadow: 0 2px 8px #302B27;
-          box-shadow: 0 2px 8px #302B27;
 }
 
 .aboutMe h1 {
@@ -771,6 +769,75 @@ svg {
   height: 2.5em;
 }
 
+@media screen and (max-width: 800px) {
+  .profileContent {
+    width: 90%;
+  }
+  .profileContent .profileImage {
+    margin: 0;
+    padding: 18px;
+  }
+  .profileContent .profileImage img {
+    border-radius: 20px;
+  }
+  .profileContent .aboutMe {
+    padding: 0;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin-left: 90px;
+  }
+  .profileContent .aboutMe h1 {
+    text-align: left;
+    font-size: 30px;
+    margin: 5px;
+  }
+  .profileContent .aboutMe h3 {
+    text-align: left;
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .profileContent .profileInfo {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+  }
+  .profileContent .profileInfo .item {
+    width: 100%;
+  }
+  .profileContent .profileInfo img {
+    display: block;
+    margin: 10px auto;
+    width: 200px;
+  }
+  .profileContent .aboutMe {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    margin: 15px;
+  }
+  .profileContent .aboutMe .item {
+    width: 100%;
+  }
+  .profileContent .aboutMe h1 {
+    text-align: center;
+    font-size: 30px;
+    margin: 5px;
+  }
+  .profileContent .aboutMe h3 {
+    text-align: center;
+    font-size: 20px;
+  }
+}
+
 .contentContainer .Title {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -820,6 +887,12 @@ svg {
   border: solid 10px #8AE9C1;
   border-radius: 20px;
   background-color: #FFFAFF;
+  -webkit-box-shadow: 0 2px 4px #EAEAEA;
+          box-shadow: 0 2px 4px #EAEAEA;
+}
+
+.contentContainer .mostRecentThree .item p {
+  padding: 5px 5px;
 }
 
 .contentContainer .item {
@@ -828,7 +901,7 @@ svg {
 }
 
 @media screen and (max-width: 800px) {
-  .contentContainer .mostRecentThree {
+  .contentContainer .contentContainer .mostRecentThree {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -838,14 +911,16 @@ svg {
 
 @media screen and (max-width: 600px) {
   .contentContainer .mostRecentThree {
+    width: 100%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
     text-align: center;
+    margin: 0;
   }
   .contentContainer .mostRecentThree .item {
-    width: 100%;
+    width: 95%;
   }
 }
 
@@ -861,13 +936,14 @@ svg {
       justify-content: space-around;
 }
 
-.BottomContainer img, .BottomContainer p {
+.BottomContainer img,
+.BottomContainer p {
   display: inline-block;
 }
 
 .BottomContainer img {
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   float: left;
 }
 
@@ -881,8 +957,7 @@ svg {
 
 .BottomContainer .itemB {
   width: 50%;
-  margin: 10px;
-  padding: 20px;
+  padding: 10px;
 }
 
 .BottomContainer .itemB .placement {
@@ -891,13 +966,14 @@ svg {
   display: flex;
 }
 
-.BottomContainer .questionaireContainer, .BottomContainer .socialMediaContainer {
+.BottomContainer .questionaireContainer,
+.BottomContainer .socialMediaContainer {
   -webkit-box-shadow: 0 2px 2px #EAEAEA;
           box-shadow: 0 2px 2px #EAEAEA;
   width: 80%;
   display: inline-block;
-  margin: 20px;
-  padding: 20px;
+  margin: 10px;
+  padding: 5px;
 }
 
 .BottomContainer .media {
@@ -925,14 +1001,18 @@ svg {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin-left: 30px;
     margin-right: auto;
   }
-  .BottomContainer .questionaireContainer, .BottomContainer .socialMediaContainer {
-    width: 100%;
-    padding: 40px;
+  .BottomContainer .socialMediaContainer {
+    width: 80%;
+  }
+  .BottomContainer .hideQuestionaire {
+    display: none;
   }
   .BottomContainer p {
+    width: 100%;
+  }
+  .BottomContainer .itemB {
     width: 100%;
   }
 }
